fix: intro overflow

--- a/css/style.sass
+++ b/css/style.sass
@@ -102,10 +102,10 @@ p
   line-height: 2em
 h1
   font-family: $family-code
-  font-size: 2.125em
+  font-size: 2rem
   font-weight: 700
   @include mobile-md
-    font-size: 3.125em
+    font-size: 3.125rem
 
 h2
   font-family: $family-sans-serif
@@ -216,3 +216,6 @@ a
   border-radius: 99px
   text-align: center
   white-space: nowrap
+
+.z-index-1
+  z-index: 1
